--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,12 @@ PySide6==6.8.1.1
 PySide6_Addons==6.8.1.1
 PySide6_Essentials==6.8.1.1
 python-rtmidi==1.5.8
+
+requests~=2.32.3
+pillow~=11.1.0
+mido~=1.3.3
+setuptools~=70.3.0
+QtAwesome~=1.3.1
+numpy~=2.0.2
+matplotlib~=3.9.4
+Pypubsub~=4.0.3
