--- a/doc/perl/Mac-CoreMIDI-0.04/META.yml
+++ b/doc/perl/Mac-CoreMIDI-0.04/META.yml
@@ -1,4 +1,4 @@
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+#XXXXXXX This is address prototype!!!  It will change in the future!!! XXXXX#
 name:         Mac-CoreMIDI
 version:      0.04
 version_from: lib/Mac/CoreMIDI.pm
