--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+certifi==2025.1.31
+charset-normalizer==3.4.1
+contourpy==1.3.0
+cycler==0.12.1
+fonttools==4.56.0
+idna==3.10
+importlib_resources==6.5.2
+kiwisolver==1.4.7
+matplotlib==3.9.4
+mido==1.3.3
+numpy==2.0.2
+packaging==24.2
+pillow==11.1.0
+pyparsing==3.2.1
+Pypubsub==4.0.3
 PySide6==6.8.1.1
 PySide6_Addons==6.8.1.1
 PySide6_Essentials==6.8.1.1
+python-dateutil==2.9.0.post0
 python-rtmidi==1.5.8
-
-requests~=2.32.3
-pillow~=11.1.0
-mido~=1.3.3
-setuptools~=70.3.0
-QtAwesome~=1.3.1
-numpy~=2.0.2
-matplotlib~=3.9.4
-Pypubsub~=4.0.3
+QtAwesome==1.3.1
+QtPy==2.4.3
+requests==2.32.3
+shiboken6==6.8.1.1
+six==1.17.0
+tabulate==0.9.0
+urllib3==2.3.0
+zipp==3.21.0
