--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ matplotlib==3.9.4
 mido==1.3.3
 numpy==2.0.2
 packaging==24.2
-pillow==11.1.0
+pillow~=11.1.0
 pyparsing==3.2.1
 Pypubsub==4.0.3
 PySide6==6.8.1.1
