--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ importlib_resources==6.5.2
 kiwisolver==1.4.7
 matplotlib==3.9.4
 mido==1.3.3
-numpy==2.0.2
+numpy
 packaging==24.2
 pillow~=11.1.0
 pyparsing==3.2.1
@@ -29,4 +29,4 @@ zipp==3.21.0
 
 setuptools~=70.3.0
 pandas~=2.2.3
-pyo~=1.0.5
+pyo
