--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,12 @@ packaging==24.2
 pillow~=11.1.0
 pyparsing==3.2.1
 Pypubsub==4.0.3
-PySide6==6.9.1.1
-PySide6_Addons==6.9.1.1
-PySide6_Essentials==6.9.1.1
+PySide6
+PySide6_Addons
+PySide6_Essentials
 python-dateutil==2.9.0.post0
 python-rtmidi==1.5.8
+pyaudio==0.2.14
 QtAwesome==1.3.1
 QtPy==2.4.3
 requests==2.32.3
