--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,4 +42,4 @@ jobs:
 
     - name: Deploy to GitHub Pages
       uses: actions/deploy-pages@v4
-      if: 
+      if: github.ref == 'refs/heads/main' 
