[refactor] splitting out picomidi

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,105 @@
-certifi==2025.1.31
-charset-normalizer==3.4.1
-contourpy==1.3.0
+alabaster==1.0.0
+astroid==4.0.1
+babel==2.17.0
+biopandas==0.5.1
+biopython==1.85
+biotite==1.2.0
+biotraj==1.2.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+contourpy==1.3.2
 cycler==0.12.1
-fonttools==4.56.0
+darkdetect==0.7.1
+-e git+https://github.com/markxbrooks/decologr.git@aeb039d6a937e166e5474f86b99bbec733c7f2fd#egg=decologr
+dill==0.4.0
+docutils==0.21.2
+exceptiongroup==1.3.0
+flake8==7.3.0
+fonttools==4.59.0
+gemmi==0.7.3
+greenlet==3.2.4
+html2image==2.0.7
 idna==3.10
+imageio==2.37.0
+imagesize==1.4.1
 importlib_resources==6.5.2
-kiwisolver==1.4.7
-matplotlib==3.9.4
+iniconfig==2.1.0
+isort==7.0.0
+Jinja2==3.1.6
+kiwisolver==1.4.9
+lazy_loader==0.4
+llvmlite==0.45.1
+looseversion==1.1.2
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mccabe==0.7.0
 mido==1.3.3
-numpy
-packaging==24.2
-pillow~=11.1.0
-pyparsing==3.2.1
+mmtf-python==1.1.3
+msgpack==1.1.1
+mypy==1.18.2
+mypy_extensions==1.1.0
+networkx==3.4.2
+numba @ file:///Users/brooks/Downloads/numba-0.62.1-cp310-cp310-macosx_11_0_arm64.whl#sha256=e1e1f4781d3f9f7c23f16eb04e76ca10b5a3516e959634bd226fc48d5d8e7a0a
+numpy==1.26.4
+packaging==25.0
+pandas==2.3.1
+pathspec==0.12.1
+-e git+https://github.com/markxbrooks/picogl.git@14d42cfd8888bed054c7c28f93cca8f9127296a6#egg=picogl
+-e git+https://github.com/markxbrooks/PicoMidi.git@8996a7de66334ae88a871d7b5bd40f1457964e28#egg=picomidi
+pillow==11.3.0
+platformdirs==4.5.0
+pluggy==1.6.0
+PyAudio==0.2.14
+pycodestyle==2.14.0
+pyflakes==3.4.0
+pyfluidsynth==1.3.4
+pyglm==2.8.2
+Pygments==2.19.2
+pylint==4.0.2
+pyo==1.0.5
+PyOpenGL==3.1.9
+PyOpenGL-accelerate==3.1.9
+pyparsing==3.2.3
 Pypubsub==4.0.3
-PySide6
-PySide6_Addons
-PySide6_Essentials
+pyqtdarktheme @ file:///Users/brooks/projects/biotoolkit/biotoolkit/deps/pyqtdarktheme-2.1.0-py3-none-any.whl#sha256=8739d99502230fbaca42551ea033c9ae31c81c4ebfec2f1ffde38f32a18bea7a
+PySide6==6.9.1
+PySide6_Addons==6.9.1
+PySide6_Essentials==6.9.1
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-rtmidi==1.5.8
-pyaudio==0.2.14
-QtAwesome==1.3.1
+pytz==2025.2
+PyYAML==6.0.2
+QtAwesome==1.4.0
 QtPy==2.4.3
-requests==2.32.3
-shiboken6==6.8.1.1
+requests==2.32.4
+scikit-image==0.25.2
+scipy==1.15.3
+shiboken6==6.9.1
 six==1.17.0
+snowballstemmer==3.0.1
+Sphinx==8.1.3
+sphinx-autoapi==3.6.0
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+spleeter==2.4.2
+SQLAlchemy==2.0.43
+style==1.1.0
 tabulate==0.9.0
-urllib3==2.3.0
+tifffile==2025.5.10
+tomita==0.2.0
+tomli==2.2.1
+tomlkit==0.13.3
+typing_extensions==4.14.1
+tzdata==2025.2
+update==0.0.1
+urllib3==2.5.0
+websocket-client==1.8.0
 zipp==3.21.0
-
-setuptools~=70.3.0
-pandas~=2.2.3
-pyo
-pyfluidsynth
