--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+# Linux building files
 appimagetool
 appimagetool-extracted
+snap
 os
 sys
 argparse
 subprocess
 shutil
+jdxi_dmg
 tests/sheep.mid
 appimagetool*
 spleeter-env
