[build] debugging mac

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,8 @@ ipython_config.py
 #   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
 #   in version control.
 #   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
+JD-Xi-Editor.app/
+JD-Xi-Editor.pkg/
 .pdm.toml
 .pdm-python
 .pdm-build/
