--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ docutils==0.21.2
 exceptiongroup==1.3.0
 flake8==7.3.0
 fonttools==4.59.0
-gemmi==0.7.3
+# gemmi==0.7.3
 greenlet==3.2.4
 html2image==2.0.7
 idna==3.10
@@ -40,13 +40,13 @@ msgpack==1.1.1
 mypy==1.18.2
 mypy_extensions==1.1.0
 networkx==3.4.2
-numba @ file:///Users/brooks/Downloads/numba-0.62.1-cp310-cp310-macosx_11_0_arm64.whl#sha256=e1e1f4781d3f9f7c23f16eb04e76ca10b5a3516e959634bd226fc48d5d8e7a0a
+# numba @ file:///Users/brooks/Downloads/numba-0.62.1-cp310-cp310-macosx_11_0_arm64.whl#sha256=e1e1f4781d3f9f7c23f16eb04e76ca10b5a3516e959634bd226fc48d5d8e7a0a
 numpy==1.26.4
 packaging==25.0
 pandas==2.3.1
 pathspec==0.12.1
--e git+https://github.com/markxbrooks/picogl.git@14d42cfd8888bed054c7c28f93cca8f9127296a6#egg=picogl
--e git+https://github.com/markxbrooks/PicoMidi.git@8996a7de66334ae88a871d7b5bd40f1457964e28#egg=picomidi
+# -e git+https://github.com/markxbrooks/picogl.git@14d42cfd8888bed054c7c28f93cca8f9127296a6#egg=picogl
+#-e git+https://github.com/markxbrooks/PicoMidi.git@8996a7de66334ae88a871d7b5bd40f1457964e28#egg=picomidi
 pillow==11.3.0
 platformdirs==4.5.0
 pluggy==1.6.0
@@ -58,11 +58,12 @@ pyglm==2.8.2
 Pygments==2.19.2
 pylint==4.0.2
 pyo==1.0.5
-PyOpenGL==3.1.9
-PyOpenGL-accelerate==3.1.9
+# PyOpenGL==3.1.9
+# PyOpenGL-accelerate==3.1.9
 pyparsing==3.2.3
 Pypubsub==4.0.3
-pyqtdarktheme @ file:///Users/brooks/projects/biotoolkit/biotoolkit/deps/pyqtdarktheme-2.1.0-py3-none-any.whl#sha256=8739d99502230fbaca42551ea033c9ae31c81c4ebfec2f1ffde38f32a18bea7a
+# pyqtdarktheme @ file:///Users/brooks/projects/biotoolkit/biotoolkit/deps/pyqtdarktheme-2.1.0-py3-none-any.whl#sha256=8739d99502230fbaca42551ea033c9ae31c81c4ebfec2f1ffde38f32a18bea7a
+pyqtdarktheme
 PySide6==6.9.1
 PySide6_Addons==6.9.1
 PySide6_Essentials==6.9.1
@@ -89,7 +90,7 @@ sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
-spleeter==2.4.2
+# spleeter==2.4.2
 SQLAlchemy==2.0.43
 style==1.1.0
 tabulate==0.9.0
